tambahin margin di home

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <!-- Navigasi Start -->
     <nav class="navbar flex-column">
         <div class="navbar-brand mb-4 mt-4 mb-sm-0 mt-sm-0">
-            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid">
+            <img src="asset/img/brand.png" alt="logo" class="logo img-fluid ms-3 ms-lg-5">
         </div>
         <ul class="navbar-nav flex-row flex-wrap justify-content-center px-4">
             <li class="nav-item px-3">
