+file css untuk blog, dan +animasi navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <!-- <h1 class="mx-md-2 mx-lg-2">Our Portfolio</h1> -->
         <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center">
             <div class="my-2 mx-md-2 mx-lg-2">
-                <a href="#img1" data-toggle="modal" data-target="#img1" class="">
+                <a href="#img1" data-toggle="modal" data-target="#img1">
                     <img class="img-portfolio" src="/asset/img/1.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
-                <a href="#img2" data-toggle="modal" data-target="#img2" class="">
+                <a href="#img2" data-toggle="modal" data-target="#img2">
                     <img class="img-portfolio" src="/asset/img/2.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
-                <a href="#img3" data-toggle="modal" data-target="#img3" class="">
+                <a href="#img3" data-toggle="modal" data-target="#img3">
                     <img class="img-portfolio" src="/asset/img/3.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
-                <a href="#img4" data-toggle="modal" data-target="#img4" class="">
+                <a href="#img4" data-toggle="modal" data-target="#img4">
                     <img class="img-portfolio" src="/asset/img/4.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
