--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style_home.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_blog.css">
     <title>Document</title>
 </head>
 
@@ -48,7 +48,7 @@
                     corporis esse qui eum repellendus neque soluta impedit aperiam, est tenetur perspiciatis, rem
                     praesentium vero adipisci consequatur? Dolores, temporibus?.
                 </p>
-                <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+                <p class="lead mb-0"><a href="" class="text-white fw-bold">Continue reading...</a></p>
             </div>
         </div>
 
