--- a/blog.html
+++ b/blog.html
@@ -124,19 +124,23 @@
                 </div>
                 <div class="col-md-4">
                     <div class="footer-item">
-                        <h3 class="footer-title">Follow Us</h3>
-                        <div class="footer-social">
-                            <a href="#" class="footer-social-item">
+                        <h3 class="footer-title mb-2">Follow Us</h3>
+                        <div class="footer-social d-flex flex-column">
+                            <a href="#" class="footer-social-item  mb-3">
                                 <img src="asset/icon/facebook.png" alt="fb" class="icon">
+                                White Picture Studio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/twitter.png" alt="tw" class="icon">
+                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/instagram.png" alt="ig" class="icon">
+                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/youtube.png" alt="yt" class="icon">
+                                White Picture Studio
                             </a>
                         </div>
                     </div>
