--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <!-- Portfolio Start -->
     <section id="portfolio" class="py-5 portfolio">
-        <!-- <h1 class="mx-md-2 mx-lg-2">Our Portfolio</h1> -->
+        <h1 class="display-5 text-center">Portfolio</h1>
         <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center">
             <div class="my-2 mx-md-2 mx-lg-2">
                 <a href="#img1" data-toggle="modal" data-target="#img1">
@@ -151,19 +151,23 @@
                 </div>
                 <div class="col-md-4">
                     <div class="footer-item">
-                        <h3 class="footer-title">Follow Us</h3>
-                        <div class="footer-social">
-                            <a href="#" class="footer-social-item">
+                        <h3 class="footer-title mb-2">Follow Us</h3>
+                        <div class="footer-social d-flex flex-column">
+                            <a href="#" class="footer-social-item  mb-3">
                                 <img src="asset/icon/facebook.png" alt="fb" class="icon">
+                                White Picture Studio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/twitter.png" alt="tw" class="icon">
+                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/instagram.png" alt="ig" class="icon">
+                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item">
+                            <a href="#" class="footer-social-item mb-3">
                                 <img src="asset/icon/youtube.png" alt="yt" class="icon">
+                                White Picture Studio
                             </a>
                         </div>
                     </div>
