--- a/blog.html
+++ b/blog.html
@@ -30,78 +30,84 @@
                 <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
     <!-- Navigasi End -->
 
-    <main class="container mt-3">
-        <div class="p-4 p-md-5 mb-4 text-white rounded blog-header">
-            <div class="col-md-6 px-0">
-                <h1 class="display-4 fst-italic">Lorem Ipsum</h1>
-                <p class="lead my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum accusamus quia
-                    corporis esse qui eum repellendus neque soluta impedit aperiam, est tenetur perspiciatis, rem
-                    praesentium vero adipisci consequatur? Dolores, temporibus?.
-                </p>
-                <p class="lead mb-0"><a href="" class="text-white fw-bold">Continue reading...</a></p>
-            </div>
-        </div>
-
-        <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
-            <div class="col">
-                <div class="card shadow">
-                    <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Ipsum</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                            similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo nesciunt
-                            odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                        <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card shadow">
-                    <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Ipsum</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                            similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo nesciunt
-                            odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                        <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card shadow">
-                    <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Ipsum</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                            similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo nesciunt
-                            odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                        <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card shadow">
-                    <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Ipsum</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
-                            similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo nesciunt
-                            odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
-                        <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
-                    </div>
+    <main class="">
+        <h1 class="title text-white py-5 text-center">Blog</h1>
+        <div class="mx-3 mt-3">
+            <div class="p-4 p-md-5 mb-4 text-white rounded blog-header">
+                <div class="col-md-6 px-0">
+                    <h1 class="display-4 fst-italic">Lorem Ipsum</h1>
+                    <p class="lead my-3">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum accusamus quia
+                        corporis esse qui eum repellendus neque soluta impedit aperiam, est tenetur perspiciatis, rem
+                        praesentium vero adipisci consequatur? Dolores, temporibus?.
+                    </p>
+                    <p class="lead mb-0"><a href="" class="text-white fw-bold">Continue reading...</a></p>
                 </div>
             </div>
 
+            <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
+                <div class="col">
+                    <div class="card shadow">
+                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem Ipsum</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                nesciunt
+                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem Ipsum</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                nesciunt
+                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem Ipsum</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                nesciunt
+                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <img src="./asset/img/blog.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem Ipsum</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab eius,
+                                similique distinctio nostrum repellendus quibusdam iste assumenda laudantium quo
+                                nesciunt
+                                odit error vitae. Optio ratione ab quidem! Inventore, rerum veritatis.</p>
+                            <a href="" class="d-flex justify-content-end stretched-link">Continue reading...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
