--- a/portfolio.html
+++ b/portfolio.html
@@ -30,22 +30,22 @@
                 <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item px-3">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
     <!-- Navigasi End -->
 
     <!-- Portfolio Start -->
-    <section id="portfolio" class="py-5 portfolio">
-        <h1 class="display-5 text-center">Portfolio</h1>
-        <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center">
+    <section id="portfolio" class="portfolio">
+        <h1 class="title text-white py-5 text-center">Portfolio</h1>
+        <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center mx-3 mb-5">
             <div class="my-2 mx-md-2 mx-lg-2">
                 <a href="#img1" data-toggle="modal" data-target="#img1">
-                    <img class="img-portfolio" src="/asset/img/1.jpg" alt="">
+                    <img class="img-portfolio img-fluid" src="/asset/img/1.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
@@ -58,7 +58,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <img src="./asset/img/1.jpg" alt="" class="w-100">
+                                <img src="./asset/img/1.jpg" alt="" class="w-100 img-fluid">
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
                 <a href="#img2" data-toggle="modal" data-target="#img2">
-                    <img class="img-portfolio" src="/asset/img/2.jpg" alt="">
+                    <img class="img-portfolio img-fluid" src="/asset/img/2.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
@@ -88,7 +88,7 @@
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
                 <a href="#img3" data-toggle="modal" data-target="#img3">
-                    <img class="img-portfolio" src="/asset/img/3.jpg" alt="">
+                    <img class="img-portfolio img-fluid" src="/asset/img/3.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
@@ -109,7 +109,7 @@
             </div>
             <div class="my-2 mx-md-2 mx-lg-2">
                 <a href="#img4" data-toggle="modal" data-target="#img4">
-                    <img class="img-portfolio" src="/asset/img/4.jpg" alt="">
+                    <img class="img-portfolio img-fluid" src="/asset/img/4.jpg" alt="">
                 </a>
                 <div class="modal fade" id="img4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
