--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
     <link href='https://fonts.googleapis.com/css?family=Ms Madi' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_home.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style_home.css">
+    <link rel="stylesheet" href="style_contact.css">
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -38,11 +39,46 @@
     </nav>
     <!-- Navigasi End -->
 
-    <!-- Jumbotron Start -->
-    <div class="jumbotron">
-        <img src="asset/img/jumbotron.jpg" alt="jumbotron" class="jumbotron-img">
+    <div class="container mb-5">
+        <div class="pt-3">
+            <div class="row">
+                <h2>Send Us Message</h2>
+            </div>
+            <div class="row">
+                <h4 style="text-align:center">We'd love to hear from you!</h4>
+            </div>
+        </div>
+        <div class="row input-container">
+            <div class="col-xs-12">
+                <div class="styled-input wide">
+                    <input type="text" required />
+                    <label>Name</label>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <div class="styled-input">
+                    <input type="text" required />
+                    <label>Email</label>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <div class="styled-input" style="float:right;">
+                    <input type="text" required />
+                    <label>Phone Number</label>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="styled-input wide">
+                    <textarea required></textarea>
+                    <label>Message</label>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="btn-lrg submit-btn">Send Message</div>
+            </div>
+        </div>
     </div>
-    <!-- Jumbotron End -->
+    </div>
 
     <!-- Footer Start -->
     <footer class="footer">
@@ -63,23 +99,19 @@
                 </div>
                 <div class="col-md-4">
                     <div class="footer-item">
-                        <h3 class="footer-title mb-2">Follow Us</h3>
-                        <div class="footer-social d-flex flex-column">
-                            <a href="#" class="footer-social-item  mb-3">
+                        <h3 class="footer-title">Follow Us</h3>
+                        <div class="footer-social">
+                            <a href="#" class="footer-social-item">
                                 <img src="asset/icon/facebook.png" alt="fb" class="icon">
-                                White Picture Studio
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
+                            <a href="#" class="footer-social-item">
                                 <img src="asset/icon/twitter.png" alt="tw" class="icon">
-                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
+                            <a href="#" class="footer-social-item">
                                 <img src="asset/icon/instagram.png" alt="ig" class="icon">
-                                @whitepicturestudio
                             </a>
-                            <a href="#" class="footer-social-item mb-3">
+                            <a href="#" class="footer-social-item">
                                 <img src="asset/icon/youtube.png" alt="yt" class="icon">
-                                White Picture Studio
                             </a>
                         </div>
                     </div>
@@ -95,9 +127,7 @@
         </div>
     </footer>
     <!-- Footer End -->
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
 
 </html>
