--- a/home.html
+++ b/home.html
@@ -50,9 +50,9 @@
     <!-- Caraousel Start -->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url('asset/img/jumbotron\ 1.jpg')">
+            <div class="carousel-item active" style="background-image: url('asset/img/jumbotron1.jpg')">
             </div>
-            <div class="carousel-item" style="background-image: url('asset/img/jumbotron\ 2.jpg')">
+            <div class="carousel-item" style="background-image: url('asset/img/jumbotron2.jpg')">
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
