--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <!-- FontAwesome -->
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
-    <link rel="stylesheet" href="style_home.css" />
+    <link rel="stylesheet" href="css/style_home.css" />
     <title>Document</title>
 </head>
 
