--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
     <!-- FontAwesome -->
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
-    <link rel="stylesheet" href="style_home.css" />
-    <link rel="stylesheet" href="style_portfolio.css">
+    <link rel="stylesheet" href="css/style_home.css" />
+    <link rel="stylesheet" href="css/style_portfolio.css">
     <title>Document</title>
 </head>
 
