--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <!-- Eksternal CSS -->
     <link rel="stylesheet" href="css/style_index.css" />
     <link rel="stylesheet" href="css/style_contact.css">
+    <link rel="icon" href="./asset/img/brand.png" />
     <title>Document</title>
 </head>
 
