--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="asset/fontawesome-free-6.1.1-web/js/all.js"></script>
     <!-- Eksternal CSS -->
     <link rel="stylesheet" href="css/style_index.css" />
-    <link rel="icon" href="./asset/img/brand.png">
+    <link rel="icon" href="./asset/img/brand.png" />
     <title>WhitePicture Studio</title>
 </head>
 
