add title and change brand capital font

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style_index.css" />
     <link rel="stylesheet" href="css/style_contact.css">
     <link rel="icon" href="./asset/img/brand.png" />
-    <title>Document</title>
+    <title>Contact Us | Whitepicture Studio</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-custom sticky-top navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
-                WhitePicture Studio
+                Whitepicture Studio
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars"
                 aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
