--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigasi Start -->
     <nav class="navbar navbar-custom sticky-top navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">
+            <a class="navbar-brand fw-bold" href="/">
                 Whitepicture Studio
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars"
