change class name

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         </div>
         <!-- Welcome End-->
 
-        <!-- Gallery Start-->
-        <div class=" gallery text-white py-4">
+        <!-- Order Start-->
+        <div class="order text-white py-4">
             <div class="container">
                 <div class="row">
-                    <div class="gallery-left col-12 col-md-6">
+                    <div class="order-left col-12 col-md-6">
                         <h1>INTIMATE WEDDING FOR THE ADVENTURE</h1>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error dolor blanditiis
                             vitae non
@@ -218,13 +218,13 @@
                         </div>
                         <!-- Modal End -->
                     </div>
-                    <div class="gallery-right col-12 col-md-5 text-center text-md-end ms-md-5">
-                        <img src="asset/gallery/beautiful-couple-having-their-wedding-beach.jpg" width="200px" alt="">
+                    <div class="order-right col-12 col-md-5 text-center text-md-end ms-md-5">
+                        <img src="asset/order/beautiful-couple-having-their-wedding-beach.jpg" width="200px" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Gallery End-->
+        <!-- Order End-->
 
         <!-- Footer Start -->
         <footer class="footer">
