edit col for button

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- Welcome End-->
 
         <!-- Order Start-->
-        <div class="order text-white py-4">
+        <div class="order text-white py-5">
             <div class="container">
                 <div class="row">
                     <div class="order-left col-12 col-md-6">
@@ -130,93 +130,95 @@
                             eaque
                             veniam.
                         </p>
-                        <button id="showmore" type="button" class="btn btn-light col-3 col-md-0 offset-4 offset-md-0"
-                            data-bs-toggle="modal" data-bs-target="#exampleModal">Order Now</button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog modal-lg modal-dialog-centered">
-                                <div class="modal-content">
-                                    <div class="d-flex justify-content-end">
-                                        <button type="button" class="btn-close mx-3 mt-3" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="table-responsive">
-                                            <table class="table align-middle table-bordered text-center">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col" colspan="2">Paket</th>
-                                                        <th scope="col">Premium <br> RP.2.500.000</th>
-                                                        <th scope="col">Premium <br> RP.2.500.000</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
-                                                            Ekslusif
-                                                            non glass</td>
-                                                        <td>✔</td>
-                                                        <td>✔</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2"></td>
-                                                        <td><button class="rounded-3">Order Now</button>
-                                                        </td>
-                                                        <td><button class="rounded-3">Order Now</button>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+                        <div class="col-4 offset-4 col-md-0 offset-md-0">
+                            <button id="showmore" type="button" class="btn btn-light" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">Order Now</button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog modal-lg modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="d-flex justify-content-end">
+                                            <button type="button" class="btn-close mx-3 mt-3" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="table-responsive">
+                                                <table class="table align-middle table-bordered text-center">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col" colspan="2">Paket</th>
+                                                            <th scope="col">Premium <br> RP.2.500.000</th>
+                                                            <th scope="col">Premium <br> RP.2.500.000</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2">2 Pcs foto ukuran 40x60 Plus Bingkai
+                                                                Ekslusif
+                                                                non glass</td>
+                                                            <td>✔</td>
+                                                            <td>✔</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2"></td>
+                                                            <td><button class="rounded-3">Order Now</button>
+                                                            </td>
+                                                            <td><button class="rounded-3">Order Now</button>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- Modal End -->
                         </div>
-                        <!-- Modal End -->
+
                     </div>
                     <div class="order-right col-12 col-md-5 text-center text-md-end ms-md-5">
                         <img src="asset/order/beautiful-couple-having-their-wedding-beach.jpg" width="200px" alt="">
